<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="swoosh_logo">Swoosh Logo</string>
    <string name="desired_league">Desired League</string>
    <string name="women_s">WOMEN\'S</string>
    <string name="men_s">MEN\'S</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="get_started">GET STARTED</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="find_the_team_in_your_city_and_dominate_the_league">Find the team in your city and dominate the
        league
    </string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed beginner league near you…</string>
</resources>
