<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/backgroundImg"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:id="@+id/logoImg" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="18sp"
            android:fontFamily="@font/montserrat" android:textColor="#FFFDFD" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/menBtn" android:textOff="@string/men_s"
                android:textOn="@string/men_s" android:text="@string/men_s" tools:text="Men's" android:textColor="@color/colorAccent"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"/>
        <ToggleButton
                android:text="@string/women_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womenBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" android:textOff="@string/women_s" android:textOn="@string/women_s"
                tools:text="Women's" android:textColor="@color/colorAccent"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coedBtn" tools:text="@string/co_ed"
                android:textOff="@string/co_ed" android:textOn="@string/co_ed" android:textColor="@color/colorAccent"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:id="@+id/nextBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat" app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/backgroundImg"/>
</androidx.constraintlayout.widget.ConstraintLayout>